	-Bdynamic to the compiler.  Don't use sibcalls or inlines.
	* test/triggers/readwholedir.c (main): Wait for dtrace for a bit.
	(is_regular_test_file): Make non-static.
	(rw_files): Likewise.
	* test/demo/act/ustack.r: Expected results.
	* test/demo/act/ustack.r.p: Keep only relatively unchanging parts
	of the stack trace.

	Miscellaneous.

	* runtest: Wait for a second for coredumps to make it to disk.
	* libproc/Psymtab.c (Pbuild_file_symtab): Fix Ptrace()/Puntrace()
	imbalance.  If PTRACE_GETMAPFD doesn't work, say why.
	* libproc/Pcontrol.h (exec_handler_fun): Make it clearer that this
	is a function pointer.
	(ps_prochandle_t.exec_handler): Likewise.
	(set_exec_handler): Likewise.
	* libproc/Pcontrol.c (set_exec_handler): Likewise.
	* libproc/rtld_db.c (rd_event_enable): Turn on the rd_monitoring
	flag when rtld activity monitoring is turned on.
	(rd_ldso_nonzero_lmid_consistent_begin): Consistently use 0/1
	for the last argument of Ptrace(), not TRUE/FALSE.
	* libdtrace/dt_pid.c (dt_pid_create_usdt_probes): Don't
	Pupdate_maps().

2013-06-04  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/Build (DRTI_OBJ): Always build -fPIC.

2013-06-03  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_program.c (dtrace_program_header): Emit missing
	#include.

2013-05-22  Nick Alcock  <nick.alcock@oracle.com>

	Breakpoint notifiers.

	* libproc/libproc.h (Pbkpt_notifier): New prototype.
	* libproc/Pcontrol.h (bkpt_handler_t.notifier_list): New, this is
	sometimes now kept in a list.
	(bkpt_t.bkpt_notifiers): The list (of notifiers).
	* libproc/Pcontrol.c (Pbkpt): Rename to...
	(add_bkpt): ... this, and add is_notifier argument and optional
	addition to the notifier list.
	(Pbkpt): Re-express as wrapper around add_bkpt.
	(Pbkpt_notifier): New function, wrapper around add_bkpt.
	(Punbkpt): Refactor out cleanup calls and bkpt freeing into...
	(delete_bkpt_handler): ... this new function.  Add notifier
	cleanup calls and freeing.